# SmartLift

./: .gitignore  CMakeLists.txt  README.md
Smart_lift/: CMakeLists.txt  Smart_lift.cpp  Smart_lift.h
Smart_lift/DataBase/: CMakeLists.txt  CmakeLists.txt  DataBase.cpp  DataBase.hpp  DataBaseServer.cpp  DataBaseServer.hpp  config.txt  main.cpp
Smart_lift/DataBase/Modules/Client/: Client.cpp  Client.hpp
Smart_lift/DataBase/Modules/Server/: DataBaseServer.cpp  DataBaseServer.hpp
Smart_lift/DataBaseFile/: SmartLiftBase.db
Smart_lift/GlobalModules/Client/: Client.cpp  Client.hpp
Smart_lift/GlobalModules/ClientDB/: ClientDB.hpp
Smart_lift/GlobalModules/Config/: Config.cpp  Config.hpp
Smart_lift/GlobalModules/JSONFormatter/: JSONFormatter.cpp  JSONFormatter.hpp  example.cpp
Smart_lift/GlobalModules/Log/: CMakeLists.txt  Log.cpp  Log.hpp
Smart_lift/MQTT_Worker/: CMakeLists.txt  MQTTWorker.cpp  MQTTWorker.hpp  main.cpp
Smart_lift/MQTT_Worker/Modules/MQTTBroker/: MQTTBroker.cpp  MQTTBroker.hpp
Smart_lift/MQTT_Worker/Modules/MSWorker/: MSWorker.cpp  MSWorker.hpp
Smart_lift/MainServer/: CMakeLists.txt  MainServer.cpp  MainServer.hpp  main.cpp
Smart_lift/MainServer/Modules/: CMakeLists.txt
Smart_lift/MainServer/Modules/HTTPSServer/: HTTPSServer.cpp  HTTPSServer.hpp
Smart_lift/MainServer/Modules/NetRepeater/: NetRepeater.cpp  NetRepeater.hpp
Smart_lift/MainServer/Modules/SSLSertificate/: Sertificate.hpp
Smart_lift/MainServer/Modules/SSLSertificateLocalhost/: Sertificate.hpp
Smart_lift/MainServer/Modules/WorkerServer/: WorkerServer.cpp  WorkerServer.hpp
Smart_lift/Modules/: Server.cpp  Server.hpp
Smart_lift/Modules/Client/: Client.cpp  Client.hpp
Smart_lift/Modules/Config/: Config.cpp  Config.hpp
Smart_lift/Modules/Log/: Log.cpp  Log.hpp
Smart_lift/Modules/MQTTBroker/: MQTTBroker.cpp  MQTTBroker.hpp
Smart_lift/Modules/Marusia/: Marusia.cpp  Marusia.hpp
Smart_lift/Resurrector/: CMakeLists.txt  Resurrector.cpp  Resurrector.hpp
Smart_lift/Vorker/: CMakeLists.txt  Vorker.cpp  Vorker.hpp
Smart_lift/Vorker/Modules/ClientMtW/: Client.cpp  Client.hpp  newClient.cpp  newClient.hpp
Smart_lift/Worker/: CMakeLists.txt  Worker.cpp  Worker.hpp  WorkerServer.hpp  keysForFloors.txt  keysForMqtt.txt  main.cpp  numberFloors.txt
Smart_lift/Worker/Modules/ClientMtW/: newClient.cpp
Smart_lift/Worker/Modules/Worker/: Worker.cpp  Worker.hpp
